--- a/mia/Views/Common/HXNoNetworkView/HXNoNetworkView.xib
+++ b/mia/Views/Common/HXNoNetworkView/HXNoNetworkView.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -71,43 +72,20 @@
                         <constraint firstItem="tQo-iW-Kn0" firstAttribute="top" secondItem="P2a-mJ-R74" secondAttribute="bottom" constant="15" id="wFr-HK-qMM"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleAspectFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XJL-jA-2zM">
-                    <rect key="frame" x="273" y="28" width="32" height="32"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="XJL-jA-2zM" secondAttribute="height" multiplier="1:1" id="ad0-Fy-TZH"/>
-                        <constraint firstAttribute="width" constant="32" id="b1E-R1-AMk"/>
-                    </constraints>
-                    <state key="normal" image="HP-ShareIcon"/>
-                </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xbL-dS-dF6">
                     <rect key="frame" x="0.0" y="398" width="320" height="170"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <button opaque="NO" contentMode="scaleAspectFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ax0-pt-vS2">
-                    <rect key="frame" x="15" y="28" width="32" height="32"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="Ax0-pt-vS2" secondAttribute="height" multiplier="1:1" id="67f-i3-Cht"/>
-                        <constraint firstAttribute="width" constant="32" id="Rdn-CE-M6E"/>
-                    </constraints>
-                    <state key="normal" image="C-AvatarDefaultIcon"/>
-                    <connections>
-                        <action selector="userHeaderButtonPressed" destination="iN0-l3-epB" eventType="touchUpInside" id="OlU-YV-ClP"/>
-                    </connections>
-                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="xbL-dS-dF6" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.3" id="44w-Ky-k4n"/>
-                <constraint firstItem="Ax0-pt-vS2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="28" id="5J8-ws-tba"/>
                 <constraint firstAttribute="bottom" secondItem="xbL-dS-dF6" secondAttribute="bottom" id="5cu-sd-Pg1"/>
-                <constraint firstAttribute="trailing" secondItem="XJL-jA-2zM" secondAttribute="trailing" constant="15" id="6Gh-cH-QKn"/>
                 <constraint firstAttribute="trailing" secondItem="xbL-dS-dF6" secondAttribute="trailing" id="8uw-pX-D7G"/>
                 <constraint firstItem="xbL-dS-dF6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="EC8-bk-APc"/>
                 <constraint firstItem="xbL-dS-dF6" firstAttribute="top" secondItem="0Ds-7c-eTb" secondAttribute="bottom" id="N4j-le-ilQ"/>
                 <constraint firstItem="0Ds-7c-eTb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Nip-Cs-5bB"/>
                 <constraint firstAttribute="trailing" secondItem="0Ds-7c-eTb" secondAttribute="trailing" id="dZW-PX-Amg"/>
-                <constraint firstItem="Ax0-pt-vS2" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="dgY-dc-RQF"/>
-                <constraint firstItem="XJL-jA-2zM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="28" id="yjb-CN-Ow1"/>
             </constraints>
             <connections>
                 <outlet property="playButton" destination="tQo-iW-Kn0" id="mz5-WA-bYN"/>
@@ -117,8 +95,6 @@
         </view>
     </objects>
     <resources>
-        <image name="C-AvatarDefaultIcon" width="75" height="75"/>
-        <image name="HP-ShareIcon" width="32" height="32"/>
         <image name="NN-WiFiIcon" width="75" height="75"/>
     </resources>
 </document>
