--- a/mia/Views/Discovery/Content/PlaceHolder/HXDiscoveryPlaceHolderCardView.xib
+++ b/mia/Views/Discovery/Content/PlaceHolder/HXDiscoveryPlaceHolderCardView.xib
@@ -12,19 +12,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Npw-Xg-Njl">
-                    <rect key="frame" x="63" y="257" width="195" height="54"/>
+                    <rect key="frame" x="65" y="257" width="190" height="54"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="糟糕,暂时没有歌曲了" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6oL-oA-XAF">
-                            <rect key="frame" x="0.0" y="0.0" width="195" height="22"/>
+                            <rect key="frame" x="0.0" y="0.0" width="190" height="22"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="一大波好歌正在安利给你的路上请耐心等待..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="195" translatesAutoresizingMaskIntoConstraints="NO" id="zGp-kQ-SUS">
-                            <rect key="frame" x="0.0" y="22" width="195" height="32"/>
+                            <rect key="frame" x="0.0" y="22" width="190" height="32"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="32" id="WOs-SA-FNj"/>
-                                <constraint firstAttribute="width" constant="195" id="bVh-MP-nyZ"/>
+                                <constraint firstAttribute="width" constant="190" id="bVh-MP-nyZ"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
@@ -42,24 +42,20 @@
                         <constraint firstItem="6oL-oA-XAF" firstAttribute="leading" secondItem="Npw-Xg-Njl" secondAttribute="leading" id="xB8-yF-5aa"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xaN-NP-ESX" customClass="HXIBButton">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xaN-NP-ESX" customClass="HXIBButton">
                     <rect key="frame" x="58" y="470" width="205" height="38"/>
+                    <color key="backgroundColor" red="0.043137254901960784" green="0.81568627450980391" blue="0.73725490196078436" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="38" id="7tp-d4-AEj"/>
                         <constraint firstAttribute="width" constant="205" id="q7b-iC-Rqe"/>
                     </constraints>
-                    <state key="normal" title="点击刷新">
-                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="-10" maxY="0.0"/>
+                    <state key="normal" title="点击刷新" image="D-RefreshIcon">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                             <real key="value" value="19"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                            <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                            <real key="value" value="1"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                     <connections>
@@ -67,7 +63,7 @@
                     </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="D-NoMoreIcon" translatesAutoresizingMaskIntoConstraints="NO" id="giS-NW-xkM">
-                    <rect key="frame" x="110" y="97" width="100" height="100"/>
+                    <rect key="frame" x="95" y="67" width="130" height="130"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -85,6 +81,7 @@
         </view>
     </objects>
     <resources>
-        <image name="D-NoMoreIcon" width="100" height="100"/>
+        <image name="D-NoMoreIcon" width="130" height="130"/>
+        <image name="D-RefreshIcon" width="16" height="16"/>
     </resources>
 </document>
